Immagine home page Login admin con set last login su db

--- a/asta-web2/asta-web2/src/main/webapp/css/public.css
+++ b/asta-web2/asta-web2/src/main/webapp/css/public.css
@@ -16,11 +16,11 @@ body, .pageTitle, .resultsPage .prizes .title,
 .homePage .howItWorks .dottedLine {border-color: #0859a5;}
 
 .textPage a {color:#5bb6f7}
-.button, .becomeFundraiser .howCanRaise .sectionVideo .info {background-color: #c20e1a; color: #fff;}
+.button, .becomeFundraiser .howCanRaise .sectionVideo .info {background-color: #0859A5; color: #fff;}
 .button.alternativeColor {background-color: #1a86ea;}
 .button.alternativeColor:hover {background-color: #0859a5;}
-.becomeFundraiser .howCanRaise .sectionVideo h3 span:after {color: #c20e1a;}
-.button:hover, .button:focus, .selectStyle.element-wrapper .icon {background: #e21210; }
+.becomeFundraiser .howCanRaise .sectionVideo h3 span:after {color: #0859A5;}
+.button:hover, .button:focus, .selectStyle.element-wrapper .icon {background: #1A86EA; }
 
 .balloonStyle .balloon-content .title,
 .balloonStyle .balloon-wrapper .emailLink a {color: #1a86ea}
@@ -34,8 +34,8 @@ body, .pageTitle, .resultsPage .prizes .title,
 .carousel-container .scroller-wrapper .arrows {color: #5BB6F7;}
 
 /********************************************************************* BOTH VERSION ***************************************************************/
-#wrapperMain .banner {background-image: url("../img/public/header_bg.jpg");}
-.becomeFundraiser #wrapperMain .banner {background-image: url("../img/public/header_fundraiser_bg.jpg");}
+#wrapperMain .banner {background-image: url("../img/public/auction.jpg");}
+.becomeFundraiser #wrapperMain .banner {background-image: url("../img/public/auction.jpg");}
 #wrapperMain .searchBanner .list {padding-left: 12px;}
 .searchPage #wrapperMain .searchResults .button {padding: 5px 0;}
 #wrapperMain .banner .waves {background-image: url('../img/public/header_waves.png');}
