--- a/asta-web2/asta-web2/.settings/org.eclipse.wst.common.component
+++ b/asta-web2/asta-web2/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
   <wb-module deploy-name="asta-web2">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <property name="context-root" value="asta-web2"/>
         <property name="java-output-path" value="/asta-web2/target/classes"/>
   </wb-module>
