--- a/asta-web2/asta-web2/src/main/webapp/css/common.css
+++ b/asta-web2/asta-web2/src/main/webapp/css/common.css
@@ -93,7 +93,10 @@ a, #wrapperMain .banner .inner, #wrapperFooter .section2, .homePage .results .st
  .inner.noPadding {padding: 0;max-width: 1024px;}
 #wrapperHeader {height: 110px;}
 #wrapperHeader .section1 .links {float: right;font-size: 14px;padding: 2px 0;}
+#wrapperHeader .section1 .welcomeUser {float:left;font-size: 14px;padding: 2px 0;color: #434343; font-weight: 600;}
+#wrapperHeader .section2 .welcomeUser {float:left;font-size: 14px;padding: 2px 0;color: #434343; font-weight: 600;}
 #wrapperHeader .section1 .links, #wrapperHeader .section1 .links a {color: #434343; font-weight: 600;}
+/* #wrapperHeader .section1 .welcomeUser, #wrapperHeader .section1 .links a {color: #434343; font-weight: 600;} */
 #wrapperHeader .section2 .wrapperLogo {width: 30%; display: block;}
 #wrapperHeader .section2 .logo {width: 92%;padding: 8px 0 0 0; min-width: 290px;}
 #wrapperMain .banner .shadowOver {-webkit-box-shadow: 0px 8px 6px -6px #8D8D8D;box-shadow: 0px 8px 6px -6px #8D8D8D;width: 100%;height: 24px;position: absolute;top: -24px;}
